src/test/ui/class-cast-to-trait.stderr
error[E0599]: no method named `eat` found for type `std::boxed::Box<dyn Noisy>` in the current scope
  --> $DIR/class-cast-to-trait.rs:53:8
   |
LL |   nyan.eat();
   |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
